--- a/APP/Android/PointsLeague/app/src/main/res/drawable/dot_select.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/drawable/dot_select.xml
@@ -3,7 +3,7 @@
     android:shape="oval"
 
     >
-    <solid android:color="@color/colorWhite"/>
+    <solid android:color="@color/colorLightOrange"/>
 
     <stroke
         android:width="1dp"
