--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
@@ -1,178 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
 
-    <com.citiexchangeplatform.pointsleague.TitleBar
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <!--阴影-->
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@color/colorBackground"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <!-- 你的View放在这里 -->
-        <View
+        <com.citiexchangeplatform.pointsleague.TitleBar
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/shadow" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_height="wrap_content"/>
+        <!--阴影-->
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@color/colorBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <!-- 你的View放在这里 -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="@drawable/shadow" />
+        </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/colorBackground">
 
-            >
-            <android.support.v7.widget.CardView
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="10dp"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="3dp"
-                app:cardPreventCornerOverlap="false">
-                <LinearLayout
-                    android:layout_marginTop="80dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="30dp">
-
-                    <!--花费通用点-->
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        >
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/colorLightOrange"
-                            android:text="+ "
-                            android:textStyle="bold"
-                            android:textSize="30sp"/>
-                        <TextView
-                            android:id="@+id/textView_points_usedTotal"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/colorLightOrange"
-                            android:text="XX.XX"
-                            android:textStyle="bold"
-                            android:textSize="30sp"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/colorLightOrange"
-                            android:text="P"
-                            android:textStyle="bold"
-                            android:textSize="30sp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                    android:layout_marginTop="10dp"
-                    android:orientation="vertical"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="10dp"
+                >
+                <android.support.v7.widget.CardView
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="兑换成功"
-                        android:textSize="18sp"
-                        android:textColor="@color/colorBlack"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:text="兑换明细"
-                        android:textSize="12sp"
-                        android:textColor="#8C8C8C"
-                        />
-
-                </LinearLayout>
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="3dp"
+                    app:cardPreventCornerOverlap="false">
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
+                        android:layout_marginTop="80dp"
                         android:orientation="vertical"
-                        android:layout_marginStart="60dp"
-                        android:layout_marginEnd="60dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="40dp">
-                        <android.support.v4.view.ViewPager
-                            android:id="@+id/vp_finish_points"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="30dp">
+
+                        <!--花费通用点-->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            >
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorLightOrange"
+                                android:text="+ "
+                                android:textStyle="bold"
+                                android:textSize="30sp"/>
+                            <TextView
+                                android:id="@+id/textView_points_usedTotal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorLightOrange"
+                                android:text="XX.XX"
+                                android:textStyle="bold"
+                                android:textSize="30sp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorLightOrange"
+                                android:text="P"
+                                android:textStyle="bold"
+                                android:textSize="30sp"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_marginTop="10dp"
+                            android:orientation="vertical"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            >
 
-                        </android.support.v4.view.ViewPager>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="兑换成功"
+                                android:textSize="18sp"
+                                android:textColor="@color/colorBlack"
+                                />
 
-                        <!--<android.support.v7.widget.RecyclerView-->
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="20dp"
+                                android:text="兑换明细"
+                                android:textSize="12sp"
+                                android:textColor="#8C8C8C"
+                                />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            android:orientation="vertical"
+                            android:layout_marginStart="50dp"
+                            android:layout_marginEnd="50dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="10dp">
+                            <android.support.v4.view.ViewPager
+                                android:id="@+id/vp_finish_points"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+                            </android.support.v4.view.ViewPager>
+
+                            <!--<android.support.v7.widget.RecyclerView-->
                             <!--android:id="@+id/rv_finish_points"-->
                             <!--android:layout_width="match_parent"-->
                             <!--android:layout_height="match_parent"-->
 
                             <!--/>-->
 
-                    </LinearLayout>
+                        </LinearLayout>
 
-                    <me.relex.circleindicator.CircleIndicator
-                        android:id="@+id/indicator"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        app:ci_drawable="@drawable/dot_unselect"
-                        app:ci_drawable_unselected="@drawable/dot_select"/>
+                        <me.relex.circleindicator.CircleIndicator
+                            android:id="@+id/indicator"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            app:ci_drawable="@drawable/dot_select"
+                            app:ci_drawable_unselected="@drawable/dot_unselect"/>
 
-                    <!--<LinearLayout-->
+                        <!--<LinearLayout-->
                         <!--android:id="@+id/id_dots"-->
                         <!--android:layout_width="wrap_content"-->
                         <!--android:layout_height="20dp"-->
                         <!--android:orientation="horizontal"-->
                         <!--android:paddingBottom="4dp"-->
                         <!--android:paddingTop="4dp" >-->
-                    <!--</LinearLayout>-->
+                        <!--</LinearLayout>-->
 
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="20dp">
+
+                <ImageView
+                    android:id="@+id/imageView_order_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/success" />
+
+            </RelativeLayout>
+
+
 
         </RelativeLayout>
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
-
-            <ImageView
-                android:id="@+id/imageView_order_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/success" />
-
-        </RelativeLayout>
+    </LinearLayout>
 
 
 
-    </RelativeLayout>
 
-</LinearLayout>
+
+</ScrollView>
