--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_paying_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_paying_finish.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
