--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
@@ -1,213 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <com.citiexchangeplatform.pointsleague.TitleBar
-        android:id="@+id/title_bar"
+    android:background="@color/colorBackground"
+    >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <!--阴影-->
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@color/colorBackground"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <!-- 你的View放在这里 -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/shadow" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="550dp">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v7.widget.CardView
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginTop="85dp"
-                android:layout_width="match_parent"
-                android:layout_height="450dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="5dp"
-                app:cardPreventCornerOverlap="false">
-            </android.support.v7.widget.CardView>
-        </FrameLayout>
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <com.citiexchangeplatform.pointsleague.TitleBar
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_marginTop="35dp">
+            android:background="@color/colorWhite"/>
+        <!--阴影-->
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@color/colorBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <!-- 你的View放在这里 -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="@drawable/shadow" />
+        </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/imageView_scan_finish_business"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/nike_logo" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="550dp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <android.support.v7.widget.CardView
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginTop="85dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="450dp"
+                    app:cardCornerRadius="16dp"
+                    app:cardElevation="5dp"
+                    app:cardPreventCornerOverlap="false">
+                </android.support.v7.widget.CardView>
+            </FrameLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="-"
-                    android:textColor="#FF9546"
-                    android:textSize="32sp" />
-                <TextView
-                    android:id="@+id/textView_points_usedTotal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="XX.XX"
-                    android:textColor="#FF9546"
-                    android:textSize="32sp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="P"
-                    android:textColor="#FF9546"
-                    android:textSize="32sp" />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="抵扣成功"
-                android:textSize="18sp"
-                android:textColor="@color/colorBlack"
-                />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="￥"
-                android:textSize="32sp"
-                android:textColor="#9A8616"/>
-
-            <TextView
-                android:id="@+id/textView_current_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="XX.XX"
-                android:textSize="32sp"
-                android:textColor="#9A8616"/>
-        </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/textView_original_price_tag"
+                android:orientation="vertical"
+                android:layout_marginTop="35dp">
+
+                <ImageView
+                    android:id="@+id/imageView_scan_finish_business"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/nike_logo" />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="￥"
-                    android:textSize="18sp"
-                    android:textColor="#858585"/>
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-"
+                        android:textColor="#FF9546"
+                        android:textSize="32sp" />
+                    <TextView
+                        android:id="@+id/textView_points_usedTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="XX.XX"
+                        android:textColor="#FF9546"
+                        android:textSize="32sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="P"
+                        android:textColor="#FF9546"
+                        android:textSize="32sp" />
+
+                </LinearLayout>
+
 
                 <TextView
-                    android:id="@+id/textView_original_price"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="抵扣成功"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorBlack"
+                    />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="XX.XX"
-                    android:textSize="18sp"
-                    android:textColor="#858585"/>
-            </LinearLayout>
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="￥"
+                        android:textSize="32sp"
+                        android:textColor="#9A8616"/>
+
+                    <TextView
+                        android:id="@+id/textView_current_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="XX.XX"
+                        android:textSize="32sp"
+                        android:textColor="#9A8616"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/textView_original_price_tag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="￥"
+                        android:textSize="18sp"
+                        android:textColor="#858585"/>
+
+                    <TextView
+                        android:id="@+id/textView_original_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="XX.XX"
+                        android:textSize="18sp"
+                        android:textColor="#858585"/>
+                </LinearLayout>
 
 
 
 
-            <android.support.v7.widget.CardView
-                android:layout_gravity="center_horizontal"
-                android:layout_width="280dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="3dp">
-                <!--<ImageView-->
+                <android.support.v7.widget.CardView
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="280dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="3dp">
+                    <!--<ImageView-->
                     <!--android:layout_width="match_parent"-->
                     <!--android:layout_height="match_parent"-->
                     <!--android:src="@drawable/loading_card"-->
                     <!--android:scaleType="centerCrop"-->
                     <!--android:adjustViewBounds="true"-->
                     <!--/>-->
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
-
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/vp_ad"
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/loading_card"/>
-
-
-                    <LinearLayout
-                        android:id="@+id/id_dots_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:background="#00000000"
                         android:orientation="vertical"
-                        android:padding="4dp"
-                        android:visibility="visible">
+                        >
 
-                        <TextView
-                            android:id="@+id/id_image_desc"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="这个是描述"
-                            android:textColor="#ffffff" />
+                        <android.support.v4.view.ViewPager
+                            android:id="@+id/vp_ad"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/loading_card"/>
+
 
                         <LinearLayout
-                            android:id="@+id/id_dots"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/id_dots_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/dotsgroupbg"
-                            android:orientation="horizontal"
-                            android:paddingBottom="4dp"
-                            android:paddingTop="4dp" />
-                    </LinearLayout>
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentStart="true"
+                            android:background="#00000000"
+                            android:orientation="vertical"
+                            android:padding="4dp"
+                            android:visibility="visible">
 
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
+                            <TextView
+                                android:id="@+id/id_image_desc"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="这个是描述"
+                                android:textColor="#ffffff" />
+
+                            <LinearLayout
+                                android:id="@+id/id_dots"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:background="@drawable/dotsgroupbg"
+                                android:orientation="horizontal"
+                                android:paddingBottom="4dp"
+                                android:paddingTop="4dp" />
+                        </LinearLayout>
+
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
 
 
-        </LinearLayout>
+            </LinearLayout>
 
 
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
 
 
-</LinearLayout>
+
+
+</ScrollView>
