--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,8 @@
         <com.citiexchangeplatform.pointsleague.TitleBar
             android:id="@+id/title_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"/>
         <!--阴影-->
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="@color/colorBackground"
@@ -31,7 +33,7 @@
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorBackground">
+            >
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -52,7 +54,7 @@
                         android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="30dp">
+                        android:layout_marginBottom="10dp">
 
                         <!--花费通用点-->
                         <LinearLayout
@@ -117,7 +119,7 @@
                             android:layout_marginStart="50dp"
                             android:layout_marginEnd="50dp"
                             android:layout_marginTop="5dp"
-                            android:layout_marginBottom="10dp">
+                            android:layout_marginBottom="5dp">
                             <android.support.v4.view.ViewPager
                                 android:id="@+id/vp_finish_points"
                                 android:layout_width="match_parent"
@@ -125,12 +127,6 @@
 
                             </android.support.v4.view.ViewPager>
 
-                            <!--<android.support.v7.widget.RecyclerView-->
-                            <!--android:id="@+id/rv_finish_points"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="match_parent"-->
-
-                            <!--/>-->
 
                         </LinearLayout>
 
@@ -140,15 +136,6 @@
                             android:layout_height="40dp"
                             app:ci_drawable="@drawable/dot_select"
                             app:ci_drawable_unselected="@drawable/dot_unselect"/>
-
-                        <!--<LinearLayout-->
-                        <!--android:id="@+id/id_dots"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="20dp"-->
-                        <!--android:orientation="horizontal"-->
-                        <!--android:paddingBottom="4dp"-->
-                        <!--android:paddingTop="4dp" >-->
-                        <!--</LinearLayout>-->
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
